clear user answer after logout

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -19,7 +19,7 @@
       <div class="btn-nav" style="padding-right:15px;">
         <a class="navbar-brand" id="user" style="color:white;"><span class="glyphicon glyphicon-user"></span>
           {{username}}!!!</a>
-        <button class="btn btn-primary" style="margin-top: 8px;" [routerLink]="['']">Log out</button>
+        <button class="btn btn-primary" style="margin-top: 8px;" (click)="logOut()">Log out</button>
       </div>
     </ul>
   </div>
