--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -55,9 +55,9 @@
           </div>
           <br>
         </div>
-        <label style="font-size: 22px;"><i>You have answered {{results.length}} questions correctly out of
-            {{questions.length}}</i>
-          questions</label>
+        <label style="font-size: 22px;">
+          <i>You have answered {{results.length}} questions correctly out of {{questions.length}}</i> questions
+        </label>
       </div>
     </div>
   </div>
